--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 
     <title>Project</title>
 </head>
-<body>
+<body class="">
 <!-- Menu Navegação -->
 
 <div class="Center">
@@ -46,6 +46,7 @@
                 <button class="Botão-go"><img src="./img/play_circle_FILL0_wght400_GRAD0_opsz48.svg" alt=""></button>
                 <button class="Reset"><img src="./img/restart_alt_FILL0_wght400_GRAD0_opsz48.svg" alt=""></button>
             </div>
+            
         </div>
 
     </div>
